--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
 
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.4
+  firebase_core: ^2.19.0
+  cloud_firestore: ^4.11.0
+  firebase_auth: ^4.11.1
+  firebase_storage: ^11.3.1
 
 dev_dependencies:
   flutter_test:
