--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   cloud_firestore: ^4.11.0
   firebase_auth: ^4.11.1
   firebase_storage: ^11.3.1
+  google_sign_in: ^6.1.5
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
