--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_storage: ^11.3.1
   google_sign_in: ^6.1.5
   provider: ^6.0.5
+  font_awesome_flutter: ^10.6.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
