--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   provider: ^6.0.5
   font_awesome_flutter: ^10.6.0
   fluttertoast: ^8.2.2
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
