--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:label="test_minpro_insta_clone"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBKNjXsGi5xIkhmgsQTiIT8Ou8p9k45KsA" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
