--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^1.0.4
   geolocator: ^10.1.0
   geocoding: ^2.1.1
+  google_maps_flutter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
