--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   geocoding: ^2.1.1
   google_maps_flutter: ^2.5.0
   uuid: ^3.0.7
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
