--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   uuid: ^3.0.7
   cached_network_image: ^3.3.0
+  timeago: ^3.5.0
 
 dev_dependencies:
   flutter_test:
