commit 20231025 テーマデータを変更する

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   timeago: ^3.5.0
   share_plus: ^7.2.1
   scrollable_positioned_list: ^0.3.8
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
